add validation to heroine's super_name

--- a/app/views/heroines/new.html.erb
+++ b/app/views/heroines/new.html.erb
@@ -1,4 +1,12 @@
 <h1>Make a new heroine!</h1>
+<% if @heroine.errors.any? %>
+  <h2>List of errors:</h2>
+  <ul>
+    <% @heroine.errors.full_messages.each do |message| %>
+      <li><%=  message %></li>
+    <% end%>
+  </ul>
+<% end%>
 <%= form_for(@heroine) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %> <br>
