--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,15 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <h1 style="font-family: Papyrus; background: coral;">Heroine-Power Rails Code Challenege</h1>
 
+<div style="border: 1px solid black;">
+  <br>
+  <%= link_to  "Go to all heroines", heroines_path %>.............
+  <%= link_to  "Go to all powers", powers_path %>
+  <br>
+  <p></p>
+</div>
   <body>
     <%= yield %>
   </body>
