--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,4 +1,9 @@
 <h2>All Heroines</h2>
+<%= form_tag("/heroines/search", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
