Able to create new heroine with name,unique supername limitation. Able to choose superpower for heroine  from one that already exists. Upon succesful creation, redirect to the newly created heroine's show page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 <div style="border: 1px solid black;">
   <br>
   <%= link_to  "Go to all heroines", heroines_path %>.............
-  <%= link_to  "Go to all powers", powers_path %>
+  <%= link_to  "Go to all powers", powers_path %>..............
+  <%= link_to  "Create new heroine", new_heroine_path %>
+  
   <br>
   <p></p>
 </div>
