done with base deliverables

--- a/app/views/powers/index.html.erb
+++ b/app/views/powers/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @powers.each do |power| %>
     <li>
-      <%= power.name %>
+      Name: <%= power.name %>
       <br>
       Description: <%= power.description %>
     </li>
