--- a/app/views/heroines/new.html.erb
+++ b/app/views/heroines/new.html.erb
@@ -5,6 +5,6 @@
 <%= f.text_field :name %>
 <%= f.label :super_name %>
 <%= f.text_field :super_name  %>
-<%= f.collection_select :power_id, Power.all, :id, :name %>
+<%= f.collection_select :power_id, Power.all, :id, :name, prompt: "select-power"%>
 <%= f.submit "Create Heroine" %>
 <%end %>
