--- a/app/views/heroines/new.html.erb
+++ b/app/views/heroines/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @heroine do |h| %>
-<%= h.text_field :name %>
-<%= h.text_field :super_name %>
-<%= h.collection_select(:power_id, Power.all, :id, :name, :prompt => 'Select')%>
+Name: <%= h.text_field :name %> <br>
+Super Name: <%= h.text_field :super_name %> <br>
+Power: <%= h.collection_select(:power_id, Power.all, :id, :name, :prompt => 'Select')%> <br>
 <%= h.submit "submit" %>
 <% end %>
