--- a/app/views/heroines/new.html.erb
+++ b/app/views/heroines/new.html.erb
@@ -1,5 +1,5 @@
 <h1> Create New Heroine </h1>
-
+<h1><%=  @put  %></h1>
 <%= form_for @heroine do |f| %>
 <%= f.label :name%>
 <%= f.text_field :name %>
