Tried to make a search feature, partially done. Refer to previous commit for functioning app.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
   <br>
   <%= link_to  "Go to all heroines", heroines_path %>.............
   <%= link_to  "Go to all powers", powers_path %>..............
-  <%= link_to  "Create new heroine", new_heroine_path %>
+  <%= link_to  "Create new heroine", new_heroine_path %>...........
+  <%= link_to  "Find heroine by power", search_for_heroine_by_power_path %>...........
   
   <br>
   <p></p>
